# RemoteControlVehicle

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  External_GTest.cmake  LICENSE  MainTest.cpp  README.md  main.cpp  valgrind.supp
CMake/: CMakeLists.txt
CentralUnit/: CMakeLists.txt  MainTest.cpp  main.cpp  valgrind.supp
CentralUnit/CMake/: CMakeLists.txt
CentralUnit/Commands/Builders/Include/: MessageBuilder.hpp
CentralUnit/Commands/Builders/Test/Source/: ControlerCommandToRunMessageBuilderTest.cpp
CentralUnit/CommandsBuilders/Include/: AcknowledgeBuilder.hpp  ControlerCommandToRunMessageBuilder.hpp  MessageBuilder.hpp
CentralUnit/CommandsBuilders/Source/: AcknowledgeBuilder.cpp  ControlerCommandToRunMessageBuilder.cpp
CentralUnit/CommandsBuilders/Test/Mock/: MessageBuilderMock.hpp
CentralUnit/CommandsBuilders/Test/Source/: AcknowledgeBuilderTest.cpp  ControlerCommandToRunMessageBuilderTest.cpp
CentralUnit/Logger/Include/: Logger.hpp
CentralUnit/Logger/Source/: Logger.cpp
CentralUnit/Router/Include/: CommandReceiver.hpp  CommandSender.hpp  GrpcCommandReceiver.hpp  GrpcCommandSender.hpp
CentralUnit/Router/Source/: GrpcCommandReceiver.cpp  GrpcCommandSender.cpp
CentralUnit/Router/Test/Include/: GrpcCommandReceiverTest.hpp  GrpcCommandSenderTest.hpp
CentralUnit/Router/Test/Mock/: CommandReceiverMock.hpp  CommandSenderMock.hpp
CentralUnit/Router/Test/Source/: GrpcCommandReceiverTest.cpp  GrpcCommandSenderTest.cpp
CentralUnit/SystemTest/Test/Include/: HandlingUserCommandToRunTest.hpp
CentralUnit/SystemTest/Test/Source/: HandlingUserCommandToRunTest.cpp
CentralUnit/Utilites/Include/: AutoStartingTimer.hpp  CoordinateSystem.hpp  MockPointer.hpp  PinState.hpp  ProtobufStructuresComparators.hpp  Timer.hpp  UtCommandsBuilders.hpp
CentralUnit/Utilites/Source/: CMakeLists.txt  UtCommandsBuilders.cpp
CentralUnit/Utilites/Test/Source/: AutoStartingTimerTest.cpp  CommandDebugerTest.cpp  TimerTest.cpp
CentralUnit/Vehicle/Include/: InternalVehiclePool.hpp  ThreeWheeledVehicle.hpp  ThreeWheeledVehicleFactory.hpp  Vehicle.hpp  VehicleConfiguration.hpp  VehicleFactory.hpp  VehicleFactoryFacade.hpp  VehiclePool.hpp  VehiclePoolControler.hpp  VehicleTypes.hpp
CentralUnit/Vehicle/Source/: InternalVehiclePool.cpp  ThreeWheeledVehicle.cpp  ThreeWheeledVehicleFactory.cpp  VehicleControler.cpp  VehicleFactoryFacade.cpp  VehiclePoolControler.cpp
CentralUnit/Vehicle/Test/Include/: InternalVehiclePoolTest.hpp  ThreeWheeledVehicleFactoryTest.hpp  ThreeWheeledVehicleTest.hpp  VehicleFactoryFacadeTest.hpp  VehiclePoolControlerTest.hpp
CentralUnit/Vehicle/Test/Mock/: VehicleFactoryMock.hpp  VehicleMock.hpp  VehiclePoolMock.hpp
CentralUnit/Vehicle/Test/Source/: InternalVehiclePoolTest.cpp  ThreeWheeledVehicleFactoryTest.cpp  ThreeWheeledVehicleTest.cpp  VehicleControlerTest.cpp  VehicleFactoryFacadeTest.cpp  VehiclePoolControlerTest.cpp
CentralUnit/VehicleEquipment/Include/: DcEngine.hpp  Engine.hpp  EngineDriver.hpp  L293DEngineDriver.hpp  SteeringWheel.hpp
CentralUnit/VehicleEquipment/Source/: DcEngine.cpp  L293DEngineDriver.cpp  ThirtyDegreesSteeringWheel.cpp
CentralUnit/VehicleEquipment/Test/Include/: DcEngineTest.hpp  L293DEngineDriverTest.hpp
CentralUnit/VehicleEquipment/Test/Mock/: EngineDriverMock.hpp  EngineMock.hpp  SteeringWheelMock.hpp
CentralUnit/VehicleEquipment/Test/Source/: DcEngineTest.cpp  L293DEngineDriverTest.cpp
CentralUnit/VehicleSystems/Include/: FrontAxialSteeringSystem.hpp  PropulsionSystem.hpp  SingleAxisPropulsionSystem.hpp  SteeringSystem.hpp
CentralUnit/VehicleSystems/Source/: FrontAxialSteeringSystem.cpp  SingleAxisPropulsionSystem.cpp
CentralUnit/VehicleSystems/Test/Include/: FrontAxialSteeringSystemTest.hpp  SingleAxisPropulsionSystemTest.hpp
CentralUnit/VehicleSystems/Test/Mock/: PropulsionSystemMock.hpp  SteeringSystemMock.hpp
CentralUnit/VehicleSystems/Test/Source/: FrontAxialSteeringSystemTest.cpp  SingleAxisPropulsionSystemTest.cpp
CentralUnit/scripts/ci_scripts/: setup_ci_environment.sh
Commands/ProtoDefinitions/: CMakeLists.txt  Client.proto
ControlPanel/: build.gradle  settings.gradle
ControlPanel/backend/: build.gradle
ControlPanel/frontend/: build.gradle  package-lock.json  package.json
ControlPanel/src/main/proto/: CMakeLists.txt  ControlerCommandToRun.proto  Deactivate.proto  EmptyAcknowledge.proto
Interfaces/Protobuf/: Acknowledge.proto  AcknowledgeStatus.proto  CMakeLists.txt  Client.proto  ControlerCommandToRun.proto  Deactivate.proto  EmptyAcknowledge.proto  HelloMessages.proto  InitCommands.proto  RegisterUserCommand.proto  RegisterVehicle.proto  ThreeWheeledVehicleConfiguration.proto  UserCommandToRun.proto  UserCommandToStart.proto  UserCommandToStop.proto  VehicleType.proto
Logger/Include/: Logger.hpp
Messages/: Deactivate.proto  UserCommandToStart.proto  UserCommandToStop.proto  foo.proto
Router/Include/: ArduinoPinValueSetter.hpp  CommandReceiver.hpp  CommandSender.hpp  CommunicationSocket.hpp  CommunicationSocketException.hpp  GrpcCommandReceiver.hpp  GrpcCommandSender.hpp  GrpcCommunicationSocket.hpp  MessageReceiver.hpp  PinValueSetter.hpp  TcpCommunicationSocket.hpp  (+1 more)
Server/: CMakeLists.txt  main.cpp
Server/Commands/ProtoDefinitions/: Deactivate.proto
VehicleSimulator/: CMakeLists.txt  CommandReceiver.cpp  CommandReceiver.hpp  GrpcCommandSender.cpp  GrpcCommandSender.hpp  MainTest.cpp  Number.cpp  Number.hpp  commandreceiver.cpp  commandreceiver.hpp  main.cpp  main.qml
VehicleSimulator/CMake/: CMakeLists.txt
VehicleSimulator/RentalOffice/Include/: CMakeLists.txt  Car.hpp  CarIdDistributor.hpp  CarRental.hpp  CarRentalController.hpp  IdDistributor.hpp  RentalItemStatus.hpp  RentalOffice.hpp
VehicleSimulator/RentalOffice/Source/: CarIdDistributor.cpp  CarRental.cpp  CarRentalController.cpp
VehicleSimulator/RentalOffice/Test/Include/: CarIdDistributorTest.hpp  CarRentalTest.hpp
VehicleSimulator/RentalOffice/Test/Mock/: IdDistributorMock.hpp  RentalOfficeMock.hpp
VehicleSimulator/RentalOffice/Test/Source/: CarIdDistributorTest.cpp  CarRentalTest.cpp
(+123 files in other folders)
